--- a/StatusR.html
+++ b/StatusR.html
@@ -54,9 +54,10 @@ december 3 yrs
     </div>
     <div class="card">
         <div class="card-image sample-3"></div> 
-        <h2>Late July 2022</h2>
-        <p>I have made adjustments in align with the final revisions. <br>
-        I'm proud to say, My next stage will be finally getting round to editing the book cover!!</p>
+        <h2>April 2022</h2>
+        <p>I spent from January to April this year, polishing it, checking the times, and subplots, making sure it all made sense. It was then that I started to shop around on Fiverr - the marketplace of people offering their services - for an editor. Again, there are so many options, developmental editing, line editing, copy editing. I went for the option that I knew I could afford, the one which seemed like a good fit for me, and Cleo Miele of Miele Proofreading – the editor that I chose, from Texas USA - was also like me, a self-confessed “Science fiction nerd.” Happy days!
+            I now started to shop around for a cover designer, at first I was saving people under my Fiverr profile, one or two stood out as good artists. Between the editor and cover designer, this is where the major investment comes in, this can cost a fortune. For your first book you have to be very selective, choosing services that offer a good mixture of being financially viable for you, and being a good fit – creatively for your project.
+            </p>
     </div>
     <div class="card">
         <div class="card-image sample-4"></div> 
@@ -202,7 +203,7 @@ december 3 yrs
 
 
 .sample-3{   /*I'd change these to different images and classes when done*/
-    background-image: url(Images/uppp.jpg);
+    background-image: url(Images/April2022.png);
  
 }
 .sample-2{
@@ -212,7 +213,7 @@ december 3 yrs
         background-image: url(Images/update.jpeg);
 }
 .sample-4{
-    background-image: url(Images/Cover.jpg);
+    background-image: url(Images/April2022.png);
 }
 .sample-5{
     background-image: url(Images/Jan2022.png);
