--- a/StatusR.html
+++ b/StatusR.html
@@ -61,10 +61,10 @@ december 3 yrs
     </div>
     <div class="card">
         <div class="card-image sample-4"></div> 
-        <h2>July 2022</h2>
-        <p>My next challenge arises! <br> I am now proudly focusing all of 
-        my time designing the first draft of my book cover. <br> This is much harder than I anticipated, but 
-        the theme I am going for is vintage science fiction style. </p>
+        <h2>June 2022</h2>
+        <p>Things are starting to ramp up now, feelings of anxiety start to creep in, and the pressure really starts to build on you. Just as you think you are almost done with the hard work - the book lands back in your inbox from the editor. So now I have to go through her thoughts, suggestions and requested explanations. Step by step I have to accept or decline changes, I decide to accept all changes and read through it from scratch – checking that it all still made sense. She had done a great job and I was really happy with it. Although there were a few parts that she had pointed out, which required changes or further explanation, so this added to the word count.
+            At this time I had now chosen my cover artist, Shaun Stevens from Flintlock covers. I sent him a very rough hand drawn sketch, along with a few examples of existing covers. “Vintage Sci-Fi” I told him. He got it. I placed my order.
+            </p>
     </div>
     <div class="card">
         <div class="card-image sample-2"></div> 
@@ -213,7 +213,7 @@ december 3 yrs
         background-image: url(Images/update.jpeg);
 }
 .sample-4{
-    background-image: url(Images/April2022.png);
+    background-image: url(Images/June2022.png);
 }
 .sample-5{
     background-image: url(Images/Jan2022.png);
