--- a/StatusR.html
+++ b/StatusR.html
@@ -68,10 +68,13 @@ december 3 yrs
     </div>
     <div class="card">
         <div class="card-image sample-2"></div> 
-        <h2>Late June 2022</h2>
-        <p>I'm at a point now of checking the final revisions that the editor has made for me. <br>
-            Once I have checked that I'm happy with her revisions, that is it for the editing process. <br>
-            All that is left after this is formatting and we're there.</p>
+        <h2>July 2022</h2>
+        <p>With all of the up to date changes made to my writing, the cost for Cleo luckily included one more revision by her. She checked through it and I again needed to go through accepting the second pass of revisions. The writing part is now officially complete! Thank goodness!
+            I have started to get early drafts of the cover – it was exactly as I imagined, with not much more work left to do on that front now – aside from getting the text right, and minor changes we are almost there on that front. 
+            Now that we are almost there, there were a couple more things that I needed to place orders for. Firstly – Formatting, or Typesetting. Luckily my cover artist also does typesetting, so I agreed a price with Shaun and placed that order. 
+            Next, I needed to decide where to buy my ISBN numbers. The long number at the back of any book. I need two, one for the paperback, and one for the ebook. If I was releasing other formats – such as hardback copies, or audiobooks, then I would need more. 
+            I could have ordered these direct from Neilson’s, the book agency who handle the purchasing and cataloguing of ISBN’s for the UK, but I chose instead - after some investigation work - to order mine through Compass-Publishing UK.
+            </p>
     </div>
     <div class="card">
         <div class="card-image sample-1"></div> 
@@ -207,7 +210,7 @@ december 3 yrs
  
 }
 .sample-2{
-        background-image: url(Images/Upp.jpg);
+        background-image: url(Images/July2022.png);
 }
 .sample-1{
         background-image: url(Images/update.jpeg);
