--- a/StatusR.html
+++ b/StatusR.html
@@ -78,12 +78,10 @@ december 3 yrs
     </div>
     <div class="card">
         <div class="card-image sample-1"></div> 
-        <h2>Early June 2022</h2>
-        <p>I have officially sent my manuscript off to an editor. <br>
-
-            I'm very excited and nervous, this is a huge milestone. <br>
+        <h2>August 2022</h2>
+        <p>So close now I can smell it. I just need to wait for the 27th of this month and I will have my ISBN numbers, the book has now been typeset ready to go, the last piece in the jigsaw is these numbers. I have started to plan release dates now, if all goes to plan, I am aiming for 20th September. On the first of September I will officially unveil the cover.
+            The Thing I am starting to think of now – more expenses – is promoting the book. As a new author nobody knows who you are. I need to think carefully about this. It could offer the chance to pay for itself, and even claw back some of the other costs if I use the right PR.
             
-            I have also chosen my cover artist, found online with an impressive website. We have agreed on a price for his services. All we need to do now is to place
              an order, and start to think which style would suit my project.</p>
     </div>
 
@@ -213,7 +211,7 @@ december 3 yrs
         background-image: url(Images/July2022.png);
 }
 .sample-1{
-        background-image: url(Images/update.jpeg);
+        background-image: url(Images/Aug2022.png);
 }
 .sample-4{
     background-image: url(Images/June2022.png);
