--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
 </h1>
         
         <a href="StatusR.html" class="Btn">My Journey</a> 
+        <div class="gap"></div>
         <a href="Purchase.html" class="Btn">Buy my book (coming soon)</a>
         
     </div>
@@ -164,7 +165,9 @@
     position: relative;
     overflow: hidden;
 }
-
+.gap{
+    height: 5px;
+}
 .typewrite{
     color: white;
     text-decoration: none;
