--- a/StatusR.html
+++ b/StatusR.html
@@ -85,6 +85,15 @@ december 3 yrs
              an order, and start to think which style would suit my project.</p>
     </div>
 
+    <div class="card">
+        <div class="card-image sample-0"></div> 
+        <h2>August 2022</h2>
+        <p>So close now I can smell it. I just need to wait for the 27th of this month and I will have my ISBN numbers, the book has now been typeset ready to go, the last piece in the jigsaw is these numbers. I have started to plan release dates now, if all goes to plan, I am aiming for 20th September. On the first of September I will officially unveil the cover.
+            The Thing I am starting to think of now – more expenses – is promoting the book. As a new author nobody knows who you are. I need to think carefully about this. It could offer the chance to pay for itself, and even claw back some of the other costs if I use the right PR.
+            
+             an order, and start to think which style would suit my project.</p>
+    </div>
+
 
 
 
@@ -223,6 +232,9 @@ december 3 yrs
 }
 .sample-7{
     background-image: url(Images/Dec2019.jpg);
+}
+.sample-0{
+    background-image: url(Images/);
 }
 .card p{
     padding: 10px;
