--- a/StatusR.html
+++ b/StatusR.html
@@ -234,7 +234,7 @@ december 3 yrs
     background-image: url(Images/Dec2019.jpg);
 }
 .sample-0{
-    background-image: url(Images/);
+    background-image: url(Images/complete.jpg);
 }
 .card p{
     padding: 10px;
