--- a/StatusR.html
+++ b/StatusR.html
@@ -87,11 +87,12 @@ december 3 yrs
 
     <div class="card">
         <div class="card-image sample-0"></div> 
-        <h2>August 2022</h2>
-        <p>So close now I can smell it. I just need to wait for the 27th of this month and I will have my ISBN numbers, the book has now been typeset ready to go, the last piece in the jigsaw is these numbers. I have started to plan release dates now, if all goes to plan, I am aiming for 20th September. On the first of September I will officially unveil the cover.
-            The Thing I am starting to think of now – more expenses – is promoting the book. As a new author nobody knows who you are. I need to think carefully about this. It could offer the chance to pay for itself, and even claw back some of the other costs if I use the right PR.
-            
-             an order, and start to think which style would suit my project.</p>
+        <h2>September 2022</h2>
+        <p>September 1st 2022 - Book cover release day! <br>
+            I have great pleasure in revealing my amazingly designed cover for The Mars Migration.
+I have Shaun Stevens at Flintlock covers to thank for working on it for me, he has been very patient.
+I had rough designs and styles in mind, but Shaun managed to put them together beautifully for me. 
+The next major announcement will be book release day on the 20th September 2022.</p>
     </div>
 
 
