--- a/StatusR.html
+++ b/StatusR.html
@@ -89,7 +89,7 @@ december 3 yrs
         <div class="card-image sample-0"></div> 
         <h2>September 2022</h2>
         <p>September 1st 2022 - Book cover release day! <br>
-            I have great pleasure in revealing my amazingly designed cover for The Mars Migration.
+          <br>  I have great pleasure in revealing my amazingly designed cover for The Mars Migration.
 I have Shaun Stevens at Flintlock covers to thank for working on it for me, he has been very patient.
 I had rough designs and styles in mind, but Shaun managed to put them together beautifully for me. 
 The next major announcement will be book release day on the 20th September 2022.</p>
