--- a/StatusR.html
+++ b/StatusR.html
@@ -235,7 +235,7 @@ The next major announcement will be book release day on the 20th September 2022.
     background-image: url(Images/Dec2019.jpg);
 }
 .sample-0{
-    background-image: url(Images/ccover.jpg);
+    background-image: url(Images/cccover.jpg);
 }
 .card p{
     padding: 10px;
