--- a/Purchase.html
+++ b/Purchase.html
@@ -31,7 +31,13 @@ december 3 yrs
 <h1>After 3 years of dedication...</h1>
 <h2>I can finally say, you will be able to order my book very soon!</h2>
   
-    
+    <div class="Purchase">
+         <div class="pp">
+
+
+
+         </div>
+    </div>
 
 
 
@@ -85,7 +91,17 @@ december 3 yrs
     overflow: hidden;
 }
 
-
+.Purchase{
+    background: rgba( 255, 255, 255, 0.2 );
+box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+backdrop-filter: blur( 7px );
+-webkit-backdrop-filter: blur( 7px );
+border-radius: 10px;
+border: 1px solid rgba( 255, 255, 255, 0.18 );
+width: 400px;
+height: 500px;
+padding: 50px;
+}
 
 .Btn{
     text-align: center;
