--- a/Purchase.html
+++ b/Purchase.html
@@ -103,6 +103,12 @@ height: 500px;
 padding: 50px;
 }
 
+.pp{
+    background-image: url(Images/cccover.jpg);
+    width: 300px;
+    height: 300px;
+}
+
 .Btn{
     text-align: center;
     text-decoration: none;
