--- a/Purchase.html
+++ b/Purchase.html
@@ -28,9 +28,7 @@
 december 3 yrs
 
 
-<h1>After 3 years of dedication...</h1>
-<h2>I can finally say, you will be able to order my book very soon!</h2>
-  
+
     <div class="Purchase">
          <div class="pp">
 
@@ -100,13 +98,17 @@ border-radius: 10px;
 border: 1px solid rgba( 255, 255, 255, 0.18 );
 width: 400px;
 height: 500px;
-padding: 50px;
+margin: auto;
+width: 50%;
+padding-bottom: 40px;
+
 }
 
 .pp{
     background-image: url(Images/cccover.jpg);
     width: 300px;
     height: 300px;
+    align-items: center;
 }
 
 .Btn{
