--- a/Purchase.html
+++ b/Purchase.html
@@ -101,14 +101,16 @@ height: 500px;
 margin: auto;
 width: 50%;
 padding-bottom: 40px;
+align-items: center;
+text-align: center;
 
 }
 
 .pp{
     background-image: url(Images/cccover.jpg);
-    width: 300px;
-    height: 300px;
-    align-items: center;
+    width: 50%;
+    margin: 0 auto;
+    
 }
 
 .Btn{
