--- a/Purchase.html
+++ b/Purchase.html
@@ -107,9 +107,10 @@ text-align: center;
 }
 
 .pp{
-    background-image: url(Images/cccover.jpg);
+    background-color: black;
     width: 50%;
-    margin: 0 auto;
+    height: 50%;
+    
     
 }
 
