--- a/Purchase.html
+++ b/Purchase.html
@@ -108,7 +108,7 @@ padding-bottom: 40px;
 .pp{
     background-image: url(Images/ccover.jpg);
     margin: auto;
-   
+    position: absolute;
     width: 100%;
     height: 60%;
     
