--- a/Purchase.html
+++ b/Purchase.html
@@ -30,7 +30,7 @@
         </div>
         <div class="card">
             <div class="card-image sample-1"></div> 
-            <h2>August 2022</h2>
+            <h2>The time has come...</h2>
             <p>So close now I can smell it. I just need to wait for the 27th of this month and I will have my ISBN numbers, the book has now been typeset ready to go, the last piece in the jigsaw is these numbers. I have started to plan release dates now, if all goes to plan, I am aiming for 20th September. On the first of September I will officially unveil the cover.
                 The Thing I am starting to think of now – more expenses – is promoting the book. As a new author nobody knows who you are. I need to think carefully about this. It could offer the chance to pay for itself, and even claw back some of the other costs if I use the right PR.
                 
