--- a/Purchase.html
+++ b/Purchase.html
@@ -94,8 +94,37 @@
     padding: 100px 20px;
     box-sizing: border-box;
 }
-   
+.sec::before{
+    content: '';
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: red;
+    clip-path: circle(65% at 100% -20%);
+}
+.sec::after{
+    content: '';
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(89, 20, 20);
+    clip-path: circle(35% at 0% 100%);
+}
     
+.container{
+position: relative;
+z-index: 10;
+display: flex;
+justify-content: center;
+align-items: center;
+flex-wrap: wrap;
+}
+
+
     .sample-1{   /*I'd change these to different images and classes when done*/
         background-image: url(Images/mm2.png);
      
