--- a/Purchase.html
+++ b/Purchase.html
@@ -124,7 +124,17 @@ align-items: center;
 flex-wrap: wrap;
 }
 
-
+.container .card{
+    position: relative;
+    width: 300px;
+    height: 400px;
+    margin: 20px 40px;
+}
+.container .card .image{
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
     .sample-1{   /*I'd change these to different images and classes when done*/
         background-image: url(Images/mm2.png);
      
