--- a/Purchase.html
+++ b/Purchase.html
@@ -127,6 +127,8 @@ flex-wrap: wrap;
     width: 300px;
     height: 400px;
     margin: 20px 40px;
+    justify-content: center;
+    align-items: center;
 }
 .container .card .image{
     position: relative;
@@ -135,7 +137,8 @@ flex-wrap: wrap;
 }
 
 .container .card .image img{
-    max-width: 70%;
+    max-width: 100%;
+
 }
 
 
