--- a/Purchase.html
+++ b/Purchase.html
@@ -129,6 +129,7 @@ flex-wrap: wrap;
     margin: 20px 40px;
     justify-content: center;
     align-items: center;
+    background: rgba( 255, 255, 255, 0.2 );
 }
 .container .card .image{
     position: relative;
