--- a/Purchase.html
+++ b/Purchase.html
@@ -110,10 +110,12 @@ flex-wrap: wrap;
     width: 300px;
     height: 400px;
     margin: 20px 40px;
+    display: flex;
     justify-content: center;
     align-items: center;
     background: rgba( 255, 255, 255, 0.15 );
     box-shadow: 0 10px 25px rgba( 0, 0, 0, 0.2 );
+    backdrop-filter: blur(15px);
 }
 .container .card .image{
     position: relative;
