--- a/Purchase.html
+++ b/Purchase.html
@@ -119,12 +119,17 @@ flex-wrap: wrap;
 }
 .container .card .image{
     position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   
 }
 
 .container .card .image img{
-    max-width: 100%;
-
+    max-width: '';
+    justify-content: center;
+height: 300px;
+width: 650px;
 }
 
 
