--- a/Purchase.html
+++ b/Purchase.html
@@ -122,7 +122,7 @@ flex-wrap: wrap;
     display: flex;
     justify-content: center;
     align-items: center;
-  
+  flex-direction: column;
 }
 
 .container .card .image img{
