--- a/Purchase.html
+++ b/Purchase.html
@@ -32,6 +32,7 @@
             <div class="card">
                 <div class="image">
                     <img src="Images/mm2.png" alt="">
+                    <h2>Amazon</h2>
                 </div>
             </div>
         </div>
