--- a/Purchase.html
+++ b/Purchase.html
@@ -124,10 +124,11 @@ flex-wrap: wrap;
     justify-content: center;
     align-items: center;
   flex-direction: column;
+  padding: 20px;
 }
 
 .container .card .image img{
-    max-width: '';
+   
     justify-content: center;
 height: 300px;
 width: 650px;
