--- a/Purchase.html
+++ b/Purchase.html
@@ -378,8 +378,9 @@ nav .fa-solid{
 .card-image{
     height: 200px;
     margin-bottom: 15px;
-    background-size: 350px;
+    background-size: cover;
     border-radius: 15px 15px 15px 15px;
+    
     
 }
 
