--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
     <div class="social-links"><a href="https://www.facebook.com/authorwmbailey/"><i class="fa-brands fa-facebook-f"></i></a></div> 
     <div class="social-links"><a href="https://instagram.com/marsmigration?igshid=YmMyMTA2M2Y="><i class="fa-brands fa-instagram"></i></a></div>
     <div class="social-links"><a href="https://twitter.com/WayneUKwriting?t=VJcNIybkcPN1xzRArrLaAA&s=09"><i class="fa-brands fa-twitter"></i></a></div>
-    <div class="social-links"><a href="https://www.linkedin.com/in/waynebaileyagw"><i class="fa-brands fa-linkedin"></i></a></div>
+    <div class="social-links"><a href="https://www.linkedin.com/in/wayne-m-bailey-20a733251"><i class="fa-brands fa-linkedin"></i></a></div>
 
 </section>
 
