--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         
         <a href="StatusR.html" class="Btn">My Journey</a> 
         <div class="gap"></div>
-        <a href="Purchase.html" class="Btn">Buy my book (coming soon)</a>
+        <a href="Purchase.html" class="Btn">Buy my book (Out Now!)</a>
         
     </div>
 
