--- a/About.html
+++ b/About.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="icon" href="Images/smol-logo.png">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -26,7 +27,7 @@
         <i class="fa-solid fa-rocket" onclick="showMenu()" style="color:rgb(110, 36, 36)"></i>
     </nav>
             
-
+    <div id="particles-js">
   
 <div class="container">
     <div class="card">
@@ -70,6 +71,16 @@
     <img src="Meteor.png.png">
     
 </div>
+
+
+
+
+
+
+
+
+
+
 
 <!--------JavaScript for toggle-------->
 
@@ -170,6 +181,11 @@ body{
     font-weight: 800;
 
 }
+
+
+
+
+
 
 
 
