--- a/StatusR.html
+++ b/StatusR.html
@@ -95,6 +95,15 @@ I have Shaun Stevens at Flintlock covers to thank for working on it for me, he h
 I had rough designs and styles in mind, but Shaun managed to put them together beautifully for me. 
 The next major announcement will be book release day on the 20th September 2022.</p>
     </div>
+    <div class="card">
+        <div class="card-image sample-0"></div> 
+        <h2>Late September 2022</h2>
+        <p>September 25th 2022 - Book release day! <br>
+          <br>  I have great pleasure in revealing my amazingly designed cover for The Mars Migration.
+I have Shaun Stevens at Flintlock covers to thank for working on it for me, he has been very patient.
+I had rough designs and styles in mind, but Shaun managed to put them together beautifully for me. 
+The next major announcement will be book release day on the 20th September 2022.</p>
+    </div>
 
 
 
