--- a/StatusR.html
+++ b/StatusR.html
@@ -96,7 +96,7 @@ I had rough designs and styles in mind, but Shaun managed to put them together b
 The next major announcement will be book release day on the 20th September 2022.</p>
     </div>
     <div class="card">
-        <div class="card-image sample-0"></div> 
+        <div class="card-image sample-01"></div> 
         <h2>Late September 2022</h2>
         <p>September 25th 2022 - Book release day! <br>
           <br>
@@ -245,6 +245,9 @@ The next major announcement will be book release day on the 20th September 2022.
 }
 .sample-0{
     background-image: url(Images/cccover.jpg);
+}
+.sample-01{
+    background-image: url(Images/mm.jpg);
 }
 .card p{
     padding: 10px;
