--- a/StatusR.html
+++ b/StatusR.html
@@ -101,7 +101,7 @@ The next major announcement will be book release day on the 20th September 2022.
         <p>September 25th 2022 - Book release day! <br>
           <br>
         My book is officially out, after a long three years, from what started as only a hobby has progressed to me being an official
-    author with a released paperback sci-fi novel! <br> Head over to the home page to purchase</p>
+    author with a released paperback sci-fi novel! <br> Head over to the home page to purchase.</p>
     </div>
 
 
