--- a/Mission.html
+++ b/Mission.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HomePage</title>
+    <title>Mission</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;600;700&display=swap" rel="stylesheet">
@@ -87,12 +87,15 @@
 
 <script type="text/javascript" src="vanilla-tilt.js"></script>
 <script>
+
+
     VanillaTilt.init(document.querySelector(".card"),{
 		max: 25,
 		speed: 400,
         glare: true,
         "max-glare": 1,
-	});
+	}
+);
 </script>
     
 </body>
