--- a/StatusR.html
+++ b/StatusR.html
@@ -247,7 +247,7 @@ The next major announcement will be book release day on the 20th September 2022.
     background-image: url(Images/cccover.jpg);
 }
 .sample-01{
-    background-image: url(Images/mm.jpg);
+    background-image: url(Images/dad.jpg);
 }
 .card p{
     padding: 10px;
